saffari/chrome-check alignment of filter pop up fixed.

--- a/src/app/pages/ecg-cases/ecg-cases.page.scss
+++ b/src/app/pages/ecg-cases/ecg-cases.page.scss
@@ -766,9 +766,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
   position: fixed;
   border: 3px solid #f1f1f1;
   z-index: 9;
-  // left: 32%;
+  left: 30%;
   // top: 19%;
-  left: 33%;
+  // left: 33%;
   top: 131px;
   border-radius: 10px;
 }
